--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,7 +74,7 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
-
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     // Room
     def room_version = "2.6.0"
     implementation "androidx.room:room-runtime:$room_version"
