--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,26 +74,34 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
     // Room
     def room_version = "2.6.0"
-    implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
+    implementation "androidx.room:room-runtime:2.7.1"
+    annotationProcessor "androidx.room:room-compiler:2.7.1"
+    implementation "androidx.room:room-ktx:2.7.1"
 
     // Networking
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
+    implementation 'com.squareup.retrofit2:retrofit:3.0.0'
+    implementation 'com.squareup.retrofit2:converter-gson:3.0.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
 
     // ViewModel & LiveData
-    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.6.2'
-    implementation 'androidx.lifecycle:lifecycle-livedata:2.6.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.9.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata:2.9.0'
 
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1'
+    releaseImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2'
 
     // Dependency Injection
-    implementation 'com.google.dagger:hilt-android:2.48'
-    annotationProcessor 'com.google.dagger:hilt-compiler:2.48'
+    implementation 'com.google.dagger:hilt-android:2.56.2'
+    annotationProcessor 'com.google.dagger:hilt-compiler:2.56.2'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+
+}
+
+configurations.all {
+    resolutionStrategy {
+        force 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2'
+    }
 }
